# external-engine

./: .gitignore  .gitmodules  Cargo.toml  Deps.ps1  Dockerfile  README.md  RunDocker.ps1  deps.sh  desktop.py  docker-compose.yml  example-provider.py  run-docker.sh  test.html
.github/workflows/: build.yml
debian/conf/: distributions
debian/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian/dists/bullseye/: Release
debian/dists/bullseye/main/binary-amd64/: Packages  Release
debian/pool/main/r/remote-uci/: remote-uci_1.0.0-alpha.3_amd64.deb
libexternalengine/: Cargo.toml
libexternalengine/src/: lib.rs
remote-uci/: Cargo.toml  Dockerfile  README.md  remote-uci.socket  rust-toolchain
remote-uci-applet/: Cargo.toml  lichess-favicon-32-invert.argb32
remote-uci-applet/src/: main.rs
remote-uci-service/: .gitignore  Cargo.toml  build.rs
remote-uci-service/src/: main.rs
remote-uci-service/wix/: Copying.rtf  main.wxs
remote-uci/DEBIAN/: control  postinst  postrm  prerm
remote-uci/fuzz/: Cargo.toml
remote-uci/fuzz/corpus/uci_in/: debug-off  debug-on  go  isready  ponderhit  position  position-startpos  register  register-later  setoption  uci  ucinewgame
remote-uci/fuzz/corpus/uci_out/: bestmove  copyprotection  id-author  id-name  info-1  info-2  info-3  info-4  info-5  info-6  option-type-button  option-type-check  option-type-combo  option-type-spin  option-type-string  preamble  readyok  registration  uciok
remote-uci/fuzz/fuzz_targets/: uci_in.rs  uci_out.rs
remote-uci/src/: engine.rs  lib.rs  main.rs  uci.rs  ws.rs
remote-uci/usr/lib/systemd/system/: remote-uci.service
remote-uci/usr/lib/systemd/user/: remote-uci.service
remote-uci/usr/share/applications/: remote-uci.desktop
remote-uci/usr/share/doc/remote-uci/: copyright
remote-uci/wix/: main.wxl  main.wxs
src/: engine.rs  main.rs  ws.rs
stockfish/: .gitignore  Dockerfile  README.md  SHA256SUM  build-deb.sh  downloads.txt  stockfish
stockfish/DEBIAN/: control
stockfish/debian/: changelog  control  copyright  rules  watch
stockfish/usr/share/doc/stockfish/: copyright
