[package]
name = "remote-uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
clap = { version = "3.1.12", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.18.0", features = ["full"] }
