[package]
name = "remote-uci-applet"
version = "0.1.0"
description = "External UCI engine provider for lichess.org"
repository = "https://github.com/lichess-org/external-engine"
license = "GPL-3.0+"
categories = ["games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
clap = "3.1.17"
ksni = "0.2.0"
remote-uci = { path = "../remote-uci" }
tokio = "1.18.1"
