[package]
name = "remote-uci-service"
version = "1.0.0"
description = "External UCI engine provider for lichess.org as a Windows Service"
repository = "https://github.com/lichess-org/external-engine"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas@lichess.org>"]
categories = ["games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
remote-uci = { path = "../remote-uci" }
tokio = { version = "1.0", features = ["sync"] }
windows-service = "0.4.0"
simple-logging = "2.0.2"
log = "0.4.17"
clap = "3.2.8"
listenfd = "1.0.0"
