[package]
name = "remote-uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["ws"] }
btoi = "0.4.2"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
home = "0.5.3"
log = "0.4.16"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "1.13.0"
sysinfo = "0.23.10"
tokio = { version = "1.18.0", features = ["full"] }
