[package]
name = "remote-uci"
version = "0.1.0"
description = "External UCI engine provider for lichess.org"
repository = "https://github.com/lichess-org/external-engine"
license = "GPL-3.0+"
categories = ["command-line-utilities", "games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
axum = { version = "0.5.4", features = ["ws"] }
btoi = "0.4.2"
clap = { version = "3.1.12", features = ["derive"] }
combine = "4.6.4"
env_logger = "0.9.0"
home = "0.5.3"
hyper = "0.14.18"
log = "0.4.16"
memchr = "2.5.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "1.13.0"
shakmaty = { version = "0.21.1", features = ["variant"] }
sysinfo = "0.23.10"
thiserror = "1.0.31"
tokio = { version = "1.18.0", features = ["full"] }
