[package]
name = "remote-uci"
version = "1.0.0"
description = "External UCI engine provider for lichess.org"
repository = "https://github.com/lichess-org/external-engine"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas@lichess.org>"]
categories = ["command-line-utilities", "games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
axum = { version = "0.5.4", features = ["ws"] }
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
home = "0.5.3"
hyper = "0.14.18"
listenfd = "1.0.0"
log = "0.4.16"
memchr = "2.5.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "1.13.0"
shakmaty = "0.21.2"
simple-logging = "2.0.2"
sysinfo = "0.24.5"
thiserror = "1.0.31"
tokio = { version = "1.18.0", features = ["full"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.3.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.4.0"

[profile.release]
strip = true
